# ablatepcb-studio

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  app.py  build_windows.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.cmd
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
ablatepcb/: __init__.py  cli.py  detect.py  engine.py  excellon.py  gui.py  lightburn.py  models.py  report.py
ablatepcb/web/: app.js  index.html  overrides.css  style.css
docs/: README.pl.md  architecture.md  lightburn-integration.md  pcb-workflow.md  release-notes-0.1.0.md  release-notes-0.2.0.md  release-notes-0.2.1.md  release-notes-0.2.2.md  release-notes-0.2.3.md
docs/assets/: README.md
gerber2lightburn/: __init__.py  cli.py  detect.py  engine.py  gui.py  report.py
gerber2lightburn/web/: app.js  index.html
tests/: test_detect.py  test_excellon.py  test_lightburn.py  test_usb_switch_golden.py
