[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ablatepcb-studio"
version = "0.2.2"
description = "Offline Gerber/Excellon PCB ablation studio with LightBurn integration"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "mateuszsury" }]
requires-python = ">=3.11"
keywords = ["gerber", "excellon", "lightburn", "pcb", "laser", "easyeda", "kicad"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
  "numpy>=2.0",
  "Pillow>=11.0",
  "pygerber==2.4.3",
  "PySide6>=6.8",
  "pywinauto==0.6.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[project.urls]
Homepage = "https://github.com/mateuszsury/ablatepcb-studio"
Repository = "https://github.com/mateuszsury/ablatepcb-studio"
Issues = "https://github.com/mateuszsury/ablatepcb-studio/issues"
Changelog = "https://github.com/mateuszsury/ablatepcb-studio/blob/main/CHANGELOG.md"

[project.scripts]
ablatepcb = "ablatepcb.cli:main"

[tool.setuptools]
packages = ["ablatepcb"]

[tool.setuptools.package-data]
ablatepcb = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["golden: requires external redistributable golden files"]
